== release_0_4 / 2008-09-29
* line number support on parse error
* integrate coverage report into website
* integrate ditz to 'push-button release'
* Change ambiguous class name TwoWaySQL::Result to TwoWaySQL::MergeResult

== release_0_3 / 2008-09-10
* better whitespace handling
* Whitespace compaction mode
* remove preserve_eol flag
* preserve actual comment content
* write docs for space compaction mode
* change line-based scanning to whole string based scanning

== 0.2.1 / 2008-09-07
* bugfix: case insensitive match for SQL reserved words
* make Ruby1.9 ready
* integrate ditz html into site
* change idiom 'substitution' to 'interpolation'
* Handle Embedded variable comment at Scanner/Grammar level

== 0.2.0 / 2008-09-05
* Initial release
* RubyForge settings
* rdoc for published classes and methods